# sigcxx

./: CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in  main.dox
doc/graphics/: complex.tex  eventchaining.tex  example.tex  multicast.tex
include/cppevent/: abstract-trackable.hpp  binding.hpp  chain-connection.hpp  connection.hpp  delegate-connection.hpp  delegate-invoker.hpp  delegate-signal.hpp  delegate-slot.hpp  delegate.hpp  event-invoker.hpp  event-signal.hpp  event-slot.hpp  event-token.hpp  event.hpp  invokable-connection.hpp  invokable-signal.hpp  invokable-slot.hpp  invokable-token.hpp  invoker.hpp  practicalbe-invoker.hpp  signal.hpp  slot.hpp  token.hpp  trackable.hpp
include/cppevent/private/: abstract-trackable.hpp  delegate-token.hpp  delegate.hpp  event-token.hpp  invokable-token.hpp
include/sigcxx/: binode.hpp  delegate.hpp  deque.hpp  macros.hpp  sigcxx.hpp
src/: CMakeLists.txt  abstract-trackable.cpp  binding.cpp  binode.cpp  connection.cpp  deque.cpp  event.cpp  invoker.cpp  sigcxx.cpp  signal.cpp  slot.cpp  token.cpp  trackable.cpp
test/: CMakeLists.txt  delegate.cpp  event-consumer.hpp  event-source.hpp  performance.cpp  simple.cpp
test/common/: CMakeLists.txt  observer.cpp  observer.hpp  subject.cpp  subject.hpp
test/unit/: CMakeLists.txt
test/unit/basic/: CMakeLists.txt  test.cpp
test/unit/compare_boost_signal2/: CMakeLists.txt  test.cpp  test.hpp
test/unit/compare_qt5/: CMakeLists.txt  test.cpp  test.hpp
test/unit/connect/: CMakeLists.txt  test.cpp  test.hpp
test/unit/delegate/: CMakeLists.txt  test.cpp  test.hpp
test/unit/derived/: CMakeLists.txt  test.cpp  test.hpp
test/unit/disconnect_on_fire/: CMakeLists.txt  test.cpp  test.hpp
test/unit/disconnect_with_slot/: CMakeLists.txt  test.cpp
test/unit/event/: CMakeLists.txt  test.cpp
test/unit/event_base/: CMakeLists.txt  test.cpp
test/unit/event_check_connection/: CMakeLists.txt  test.cpp
test/unit/event_connect/: CMakeLists.txt  test.cpp
test/unit/event_disconnect/: CMakeLists.txt  test.cpp
test/unit/event_virtual/: CMakeLists.txt  test.cpp
test/unit/performance/: CMakeLists.txt  test.cpp  test.hpp
test/unit/qt5/: CMakeLists.txt  test.cpp  test.hpp
test/unit/signal_base/: CMakeLists.txt  test.cpp
test/unit/signal_check_connection/: CMakeLists.txt  test.cpp
test/unit/signal_connect/: CMakeLists.txt  test.cpp
test/unit/signal_delete_this/: CMakeLists.txt  test.cpp  test.hpp
test/unit/signal_disconnect/: CMakeLists.txt  test.cpp
test/unit/signal_virtual/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
test/unit/thread_safe/: CMakeLists.txt  test.cpp  test.hpp
test/unit/trackable/: CMakeLists.txt  test.cpp  test.hpp
test/unit/trackable_base/: CMakeLists.txt  test.cpp
test/unit/trackable_unbind/: CMakeLists.txt  test.cpp  test.hpp
